--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,16 +23,22 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc cppcheck
 
-      # Step 3: Compile the project
-      - name: Build the project
+      # Step 3: Compile the main program
+      - name: Build the main program
         run: |
-          gcc -o main src/main.c src/library.c test/test_main.c
+          gcc -o main src/main.c src/library.c -I include
           ls -la  # List files to verify the build
 
-      # Step 4: Run tests
-      - name: Run tests
-        run: ./main
+      # Step 4: Compile the test program
+      - name: Build the test program
+        run: |
+          gcc -o test_main test/test_main.c src/library.c -I include
+          ls -la  # List files to verify the build
 
-      # Step 5: Perform static code analysis with cppcheck
+      # Step 5: Run the test program
+      - name: Run tests
+        run: ./test_main
+
+      # Step 6: Perform static code analysis with cppcheck
       - name: Run cppcheck
         run: cppcheck --enable=all --inconclusive --quiet src/ include/
